Added hover effect for navigation bar items, using ::before pseudo selectors

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a href="#">Careers</a>
           <a href="#">About</a>
         </div>
-        <button type="button" class="button header_cta hide-for-mobile">
+        <button type="button" class="button header__cta hide-for-mobile">
           Request Invite
         </button>
       </nav>
