--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
   </head>
   <body>
     <header class="header">
-      <div class="overlay"></div>
+      <div class="overlay has-fade"></div>
 
-      <nav class="flex flex-jc-sb flex-ai-c">
+      <nav class="flex flex-jc-sb flex-ai-c container">
         <a href="/" class="header__logo">
           <img src="images/logo.svg" alt="Easybank" />
         </a>
-        <a id="btnHamburger" href="#" class="header__menu hide-for-desktop">
+        <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
           <span></span>
           <span></span>
           <span></span>
@@ -56,6 +56,14 @@
           Request Invite
         </button>
       </nav>
+
+      <div class="header__menu container has-fade">
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Contact</a>
+        <a href="">Blog</a>
+        <a href="">Careers</a>
+      </div>
     </header>
 
     Request Invite Next generation digital banking Take your financial life
