--- a/index.html
+++ b/index.html
@@ -81,51 +81,56 @@
       </div>
     </section>
 
-    <section class="features container container--pall">
-      <h2>Why choose Easybank?</h2>
-      <p>
-        We leverage Open Banking to turn your bank account into your financial
-        hub. Control your finances like never before.
-      </p>
-      <div class="feature__grid">
-        <div class="feature__item">
-          <div class="feature__icon">
-            <img src="/images/icon-online.svg" alt="" />
-          </div>
-          <div class="feature__title">Online Banking</div>
-          <div class="feature__description">
-            Our modern web and mobile applications allow you to keep track of
-            your finances wherever you are in the world.
-          </div>
+    <section class="feature">
+      <div class="feature__content container container--pall">
+        <div class="feature__intro">
+          <h2>Why choose Easybank?</h2>
+          <p>
+            We leverage Open Banking to turn your bank account into your
+            financial hub. Control your finances like never before.
+          </p>
         </div>
-        <div class="feature__item">
-          <div class="feature__icon">
-            <img src="/images/icon-budgeting.svg" alt="" />
+
+        <div class="feature__grid">
+          <div class="feature__item">
+            <div class="feature__icon">
+              <img src="/images/icon-online.svg" alt="" />
+            </div>
+            <div class="feature__title">Online Banking</div>
+            <div class="feature__description">
+              Our modern web and mobile applications allow you to keep track of
+              your finances wherever you are in the world.
+            </div>
           </div>
-          <div class="feature__title">Simple Budgeting</div>
-          <div class="feature__description">
-            Our modern web and mobile applications allow you to keep track of
-            your finances wherever you are in the world.
+          <div class="feature__item">
+            <div class="feature__icon">
+              <img src="/images/icon-budgeting.svg" alt="" />
+            </div>
+            <div class="feature__title">Simple Budgeting</div>
+            <div class="feature__description">
+              Our modern web and mobile applications allow you to keep track of
+              your finances wherever you are in the world.
+            </div>
           </div>
-        </div>
-        <div class="feature__item">
-          <div class="feature__icon">
-            <img src="/images/icon-onboarding.svg" alt="" />
+          <div class="feature__item">
+            <div class="feature__icon">
+              <img src="/images/icon-onboarding.svg" alt="" />
+            </div>
+            <div class="feature__title">Fast Onboarding</div>
+            <div class="feature__description">
+              Our modern web and mobile applications allow you to keep track of
+              your finances wherever you are in the world.
+            </div>
           </div>
-          <div class="feature__title">Fast Onboarding</div>
-          <div class="feature__description">
-            Our modern web and mobile applications allow you to keep track of
-            your finances wherever you are in the world.
-          </div>
-        </div>
-        <div class="feature__item">
-          <div class="feature__icon">
-            <img src="/images/icon-api.svg" alt="" />
-          </div>
-          <div class="feature__title">Open API</div>
-          <div class="feature__description">
-            Our modern web and mobile applications allow you to keep track of
-            your finances wherever you are in the world.
+          <div class="feature__item">
+            <div class="feature__icon">
+              <img src="/images/icon-api.svg" alt="" />
+            </div>
+            <div class="feature__title">Open API</div>
+            <div class="feature__description">
+              Our modern web and mobile applications allow you to keep track of
+              your finances wherever you are in the world.
+            </div>
           </div>
         </div>
       </div>
